# OH_LinearGradientBlur

./: .gitignore  .gitmodules  README.md
code/: README.md
code/决赛方案代码/xcomponent-gradient-blur/: README.md  build-profile.json5  oh-package.json5
code/决赛方案代码/xcomponent-gradient-blur/AppScope/: app.json5
code/决赛方案代码/xcomponent-gradient-blur/AppScope/resources/base/element/: string.json
code/决赛方案代码/xcomponent-gradient-blur/entry/: oh-package.json5
code/决赛方案代码/xcomponent-gradient-blur/entry/src/main/: module.json5
code/决赛方案代码/xcomponent-gradient-blur/entry/src/main/cpp/: CMakeLists.txt  app_napi.cpp  module.cpp  napi_manager.cpp  opengl_draw.cpp  rectangle.cpp  sat_shaders.cpp
code/决赛方案代码/xcomponent-gradient-blur/entry/src/main/cpp/include/: app_napi.h  opengl_draw.h  rectangle.h  sat_shaders.h
code/决赛方案代码/xcomponent-gradient-blur/entry/src/main/cpp/include/util/: napi_manager.h  shader.h
code/决赛方案代码/xcomponent-gradient-blur/entry/src/main/cpp/types/libnativeblur/: nativeblur.d.ts  oh-package.json5
code/决赛方案代码/xcomponent-gradient-blur/entry/src/main/ets/entryability/: EntryAbility.ts
code/决赛方案代码/xcomponent-gradient-blur/entry/src/main/ets/interface/: XComponentContext.ets
code/决赛方案代码/xcomponent-gradient-blur/entry/src/main/ets/pages/: Index.ets
code/初赛方案代码/demo-for-gradient-blur/: README.md  build-profile.json5  oh-package.json5
code/初赛方案代码/demo-for-gradient-blur/AppScope/resources/base/element/: string.json
code/初赛方案代码/demo-for-gradient-blur/entry/src/main/: module.json5
code/初赛方案代码/graphic_2d/rosen/modules/render_service_base/: BUILD.gn
(+13 files in other folders)
